--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <input type="text" id="type" placeholder="ラーメンの種類"><br>
       <input type="number" id="rating" placeholder="評価（1〜5）" min="1" max="5"><br>
       <textarea id="memo" placeholder="メモ"></textarea><br>
-      <input type="file" id="photo"><br>
+      <input type="file" id="photo" accept="image/*">
       <button type="submit">記録する</button>
     </form>
 
