--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
 </head>
+<footer style="text-align: center; margin-top: 40px; font-size: 0.9em; color: gray;">
+  アプリ最終更新日: 2025年4月17日
+</footer>
 <body>
   <h1>ラーメン記録アプリ</h1>
 
