--- a/index.html
+++ b/index.html
@@ -33,10 +33,18 @@
       <input type="text" id="shopName" placeholder="店名" required><br>
       <input type="date" id="date" required><br>
       <input type="text" id="type" placeholder="ラーメンの種類"><br>
-      <input type="number" id="price" placeholder="値段（円）"><br>
-      <input type="number" id="rating" placeholder="評価（1〜5）" min="1" max="5"><br>
+      <input type="number" id="rating" placeholder="評価（1〜5）" min="0" max="5" step="0.1"><br>
       <textarea id="memo" placeholder="メモ"></textarea><br>
       <input type="file" id="photo" accept="image/*">
+      <div id="menuList">
+        <div class="menu-item">
+          <input type="text" class="menu-name" placeholder="メニュー名">
+          <input type="number" class="menu-price" placeholder="値段（円）">
+        </div>
+      </div>
+      <p>合計金額：<span id="totalPrice">0</span> 円</p>
+      <button type="button" onclick="addMenuItem()">メニューを追加</button>
+      
       <button type="submit">記録する</button>
     </form>
     <input type="text" id="searchInput" placeholder="検索（店名・種類・メモ）">
