Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </div>
     <form id="ramenForm">
       <div style="text-align: right;">
+        <!-- <button onclick="deleteAccount()">アカウントを削除</button> -->
         <button onclick="logout()">ログアウト</button>
       </div>      
       <input type="text" id="shopName" placeholder="店名" required><br>
